# otus-matrix

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
src/: main.cpp  sparse_matrix.h
test/: sparse_matrix_test.cpp
